# markforge

./: .gitignore  CMakeLists.txt  README.md  markforge.spec  requirements.txt
.github/workflows/: release-debian.yml  release-windows.yml
cmake/: launcher.sh.in
docs/: ar.html  de.html  es.html  fa.html  fr.html  hi.html  index.html  it.html  kn.html  nl.html  pt.html  sv.html  uk.html  vi.html
src/: credentials.py  editor_widget.py  file_tree_widget.py  find_replace_bar.py  git_dialogs.py  git_manager.py  highlighter.py  i18n.py  insert_media_dialogs.py  insert_mermaid_dialog.py  insert_plantuml_dialog.py  insert_table_dialog.py  main.py  mainwindow.py  markdown_help_dialog.py  mermaid_help_dialog.py  mermaid_utils.py  outline_widget.py  plantuml_help_dialog.py  plantuml_utils.py  preview_widget.py  settings_dialog.py  spell_checker.py  splash_screen.py  themes.py
